--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,4 +1,4 @@
-name: Python application test
+name: Python application test & symbolic deployment
 
 on:
   push:
@@ -19,3 +19,10 @@ jobs:
         run: pip install pytest
       - name: Run tests
         run: pytest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build   # startet "deploy" nur, wenn "build" erfolgreich war!
+    steps:
+      - name: Symbolisches Deployment
+        run: echo "Deploy Erfolgreich am $(date)" > deployment.txt
