--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -20,19 +20,18 @@ jobs:
       - name: Run tests
         run: pytest
 
-  deploy:
+    deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v3  # nochmal Checkout
+      - uses: actions/checkout@v3
       - name: Symbolisches Deployment
         run: echo "Deploy erfolgreich am $(date)" > deployment.txt
-      - name: Commit deployment.txt ins Repository
+      - name: Push changes
         run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com
           git add deployment.txt
           git commit -m "Add deployment.txt via CI/CD"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+          git push origin HEAD:${{ github.ref }}
