--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,4 +1,4 @@
-name: Python application test & actuall deployment
+name: Python application test & symbolic deployment
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
       - name: Run tests
         run: pytest
 
-    deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
