--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -33,5 +33,5 @@ jobs:
           git config --global user.email github-actions@github.com
           git add deployment.txt
           git commit -m "Add deployment.txt via CI/CD"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${{ secrets.CI/CD }}@github.com/${{ github.repository }}
           git push origin HEAD:${{ github.ref }}
