--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -27,11 +27,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Symbolisches Deployment
         run: echo "Deploy erfolgreich am $(date)" > deployment.txt
-      - name: Push changes
+            - name: Push changes
         run: |
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
           git add deployment.txt
           git commit -m "Add deployment.txt via CI/CD"
-          git remote set-url origin https://x-access-token:${{ secrets.CI/CD }}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
           git push origin HEAD:${{ github.ref }}
