--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,4 +1,7 @@
-name: Python application test & actuall deployment
+permissions:
+  contents: write
+
+name: Python application test & actual deployment
 
 on:
   push:
@@ -9,29 +12,46 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Install dependencies
-        run: pip install pytest
-      - name: Run tests
-        run: pytest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
-      - name: Symbolisches Deployment
-        run: echo "Deploy erfolgreich am $(date)" > deployment.txt
-      - name: Push changes
+      - name: Install dependencies
         run: |
-          git config --global user.name github-actions
-          git config --global user.email github-actions@github.com
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Run tests
+        run: |
+          if [ -f pytest.ini ] || [ -d tests ]; then pytest; else echo "No tests found"; fi
+
+      - name: Configure git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Create/update deployment.txt
+        run: |
+          echo "deployment info: $(date -u)" > deployment.txt
           git add deployment.txt
-          git commit -m "Add deployment.txt via CI/CD"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
-          git push origin HEAD:${{ github.ref }}
+          git commit -m "Add deployment.txt via CI/CD" || echo "No changes to commit"
+
+      - name: Push changes back to the branch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # determine branch name from ref; fall back to default branch if needed
+          BRANCH=${GITHUB_REF#refs/heads/}
+          if [ -z "$BRANCH" ]; then
+            BRANCH=$(git remote show origin | sed -n '/HEAD branch/s/.*: //p')
+          fi
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+          git push origin HEAD:$BRANCH || echo "Push failed (may be a PR from a fork or no permissions)"
